--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JigneshAndroidTops">
         <activity
-            android:name=".implicit_intent.ImplicitActivity"
+            android:name=".recyclerView.VehicleListActivity"
             android:exported="true" >
 
             <intent-filter>
@@ -21,13 +21,16 @@
 
         </activity>
         <activity
-            android:name=".viewpager.TabPagerActivity"
+            android:name=".implicit_intent.ImplicitActivity"
             android:exported="true">
 
         </activity>
         <activity
-            android:name=".extra.AToFStringActivity"
+            android:name=".viewpager.TabPagerActivity"
             android:exported="true"></activity>
+        <activity
+            android:name=".extra.AToFStringActivity"
+            android:exported="true" />
         <activity
             android:name=".adapters.simple_adapter.SimpleAdapterActivity"
             android:exported="true" />
