--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JigneshAndroidTops">
         <activity
-            android:name=".recyclerView_crud.WeatherListActivity"
+            android:name=".recyclerView_serachView.MyDataActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,13 +20,16 @@
 
         </activity>
         <activity
-            android:name=".recyclerView.VehicleListActivity"
+            android:name=".recyclerView_crud.WeatherListActivity"
             android:exported="true">
 
         </activity>
         <activity
-            android:name=".implicit_intent.ImplicitActivity"
+            android:name=".recyclerView.VehicleListActivity"
             android:exported="true"></activity>
+        <activity
+            android:name=".implicit_intent.ImplicitActivity"
+            android:exported="true" />
         <activity
             android:name=".viewpager.TabPagerActivity"
             android:exported="true" />
