--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.jigneshandroidtops">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.JigneshAndroidTops">
+        android:theme="@style/Theme.JigneshAndroidTops"
+        android:usesCleartextTraffic="true">
         <activity
-            android:name=".recyclerView_serachView.MyDataActivity"
+            android:name=".bottom_sheet.MySheetActivity"
             android:exported="true" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,13 +24,22 @@
 
         </activity>
         <activity
-            android:name=".recyclerView_crud.WeatherListActivity"
+            android:name=".webview.MyWebActivity"
             android:exported="true">
 
         </activity>
         <activity
-            android:name=".recyclerView.VehicleListActivity"
+            android:name=".expandable_toolbar.MyToolActivity"
             android:exported="true"></activity>
+        <activity
+            android:name=".recyclerView_serachView.MyDataActivity"
+            android:exported="true" />
+        <activity
+            android:name=".recyclerView_crud.WeatherListActivity"
+            android:exported="true" />
+        <activity
+            android:name=".recyclerView.VehicleListActivity"
+            android:exported="true" />
         <activity
             android:name=".implicit_intent.ImplicitActivity"
             android:exported="true" />
