--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.JigneshAndroidTops"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".bottom_sheet.MySheetActivity"
+            android:name=".storage.InternalStorageActivity"
             android:exported="true" >
 
             <intent-filter>
@@ -24,13 +24,16 @@
 
         </activity>
         <activity
-            android:name=".webview.MyWebActivity"
+            android:name=".bottom_sheet.MySheetActivity"
             android:exported="true">
 
         </activity>
         <activity
-            android:name=".expandable_toolbar.MyToolActivity"
+            android:name=".webview.MyWebActivity"
             android:exported="true"></activity>
+        <activity
+            android:name=".expandable_toolbar.MyToolActivity"
+            android:exported="true" />
         <activity
             android:name=".recyclerView_serachView.MyDataActivity"
             android:exported="true" />
