--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,20 +13,27 @@
         android:theme="@style/Theme.JigneshAndroidTops"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".room_crud.ShowEmpDataActivity"
-            android:exported="false" />
-        <activity
-            android:name=".room_crud.EmpListActivity"
-            android:exported="true">
+            android:name=".room_recyclerView_addToFav.NoteListActivity"
+            android:exported="true" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+        <activity
+            android:name=".room_crud.ShowEmpDataActivity"
+            android:exported="false" />
+        <activity
+            android:name=".room_crud.EmpListActivity"
+            android:exported="true">
+
         </activity>
         <activity
             android:name=".storage.InternalStorageActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".bottom_sheet.MySheetActivity"
             android:exported="true" />
