--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,8 @@ dependencies {
     //firebase
     implementation platform('com.google.firebase:firebase-bom:30.0.1')
     implementation 'com.google.firebase:firebase-analytics'
-    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-auth'  // user login
+    implementation 'com.google.firebase:firebase-storage'  // images // pdf
+    implementation 'com.google.firebase:firebase-database' // object
 
 }
