--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,12 @@
         android:theme="@style/Theme.JigneshAndroidTops"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".storage.MySharedActivity"
+            android:name=".e_commerce.ERegisterActivity"
+            android:exported="true" >
+
+        </activity>
+        <activity
+            android:name=".e_commerce.ELoginActivity"
             android:exported="true" >
 
             <intent-filter>
@@ -30,6 +35,11 @@
 
         </activity>
         <activity
+            android:name=".storage.MySharedActivity"
+            android:exported="true">
+
+        </activity>
+        <activity
             android:name=".firebase.DashBoardActivity"
             android:exported="false" />
         <activity
@@ -37,9 +47,7 @@
             android:exported="false" />
         <activity
             android:name=".firebase.LoginActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".retrofit.JobListActivity"
             android:exported="true" />
