--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,23 +19,30 @@
         android:theme="@style/Theme.JigneshAndroidTops"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".e_commerce.ProductListActivity"
-            android:exported="false" />
-        <activity
-            android:name=".e_commerce.ERegisterActivity"
-            android:exported="true"></activity>
-        <activity
-            android:name=".e_commerce.ELoginActivity"
-            android:exported="true">
+            android:name=".firebase_realtime.CarListActivity"
+            android:exported="true" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+        <activity
+            android:name=".e_commerce.ProductListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".e_commerce.ERegisterActivity"
+            android:exported="true" />
+        <activity
+            android:name=".e_commerce.ELoginActivity"
+            android:exported="true">
+
         </activity>
         <activity
             android:name=".storage.MySharedActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".firebase.DashBoardActivity"
             android:exported="false" />
